# stboot-stm32

./: .clangd  .gitignore  CMakeLists.txt  README.md  disassamble.S  linker.ld
config/: .config  .config_sdmmc  stm32h743i-disco.dts
config/buildroot/: .config
core/: stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c  system_stm32h7xx.c
core/include/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
drivers/CMSIS/Device/ST/STM32H7xx/Include/: stm32h750xx.h
drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_dma2d.h  stm32h7xx_hal_spi.h
drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_dma2d.c  stm32h7xx_hal_spi.c
kernel/: .config  entry-v7m.S  stm32h743i-disco.dts
src/: boot.c  bsp.c  cmd.c  commands.c  error.c  gpio.c  led.c  mtest.c  qspi_flash.c  sdmmc.c  sdram.c  shell.c  start.s  uart.c
src/include/: bsp.h  cmd.h  errno.h  setup.h
src/lib/: qspi-flash.c  qspi-flash.h
test/: README.md  memory-speed.c  sdram_speed.c
test/linux/: m7.c  m7exe
